--- a/resume.html
+++ b/resume.html
@@ -77,10 +77,10 @@
 <!--Resume-->
 
 <div id="resume">
-  <img src="images/2019_Resume_HWiemelt.jpg">
+  <img src="images/2019_May_HWiemelt.pdf">
 </div>
 
-<a href="images/2019_Resume_HWiemelt.pdf" download><button class="btn"><i class="fa fa-download"></i>Download</button></a>
+<a href="images/2019_May_HWiemelt.pdf" download><button class="btn"><i class="fa fa-download"></i>Download</button></a>
 
 </div>
 
