--- a/resume.html
+++ b/resume.html
@@ -77,7 +77,7 @@
 <!--Resume-->
 
 <div id="resume">
-  <img src="images/2019_May_HWiemelt.pdf">
+  <img src="images/2019_May_HWiemelt.jpg">
 </div>
 
 <a href="images/2019_May_HWiemelt.pdf" download><button class="btn"><i class="fa fa-download"></i>Download</button></a>
