--- a/aboutMe.html
+++ b/aboutMe.html
@@ -75,19 +75,18 @@
 
     <div class="content_box">
 <img src="images/hmw.jpg" class="aboutMe_bio" >
-      <h3>Hello!</h3>
+      <h2>Hello!</h2>
 
-      <p>I am an artist at heart and a developer/designer at work. I live for creating and discovering unique visual and audial discoveries that the world has to offer.</p>
+      <p>I am an artist at heart and a developer/designer at work</p>
 
       <h3>My style is my own. Here is how I work.</h3>
 
-      <p>When I am in my own headspace, I have an intuitive way of thinking. My style is consistent with staying close to the fundamentals of design and understanding that the frame is what holds up a masterpiece in the end. I favor traditional styles with organic finishes, but that doesn’t keep me from absorbing the newest and latest digital trends. I see how the world changes and I intend to evolve with it.</p>  <p>I consider myself both a visual and kinesthetic learner and pick up information best by doing and visualizing what is in front of me. Many of my closest friends and followers know that I have a love for arts in various fields. In my free time, you can find me solving a giant jigsaw puzzle, listening to music, reorganizing a bookshelf, visiting a local arts and crafts fair, oil painting, or immersing myself in a video game.</p>
+      <p>When I am in my own headspace, I have an intuitive way of thinking. My style focuses on sticking to the fundamentals of design and understanding that the frame is what holds up a masterpiece in the end. I like traditional styles and favor organic finishes, but that doesn’t keep me from absorbing the newest and latest digital trends. I see how the world changes and do my best to evolve with it.</p>  <p>I consider myself both a visual and kinesthetic learner and pick up information best by doing and visualizing what is in front of me. In my free time, you can find me solving a giant jigsaw puzzle, listening to music, reorganizing a bookshelf, visiting a local arts and crafts fair, or immersing myself in a video game.</p>
 
       <h3>What am I doing now?</h3>
 
       <p>Since graduating with a Bachelor’s of Science Degree in <a href="https://finearts.illinoisstate.edu/arts-technology/" target="_blank" style="color: #ec91a6;">Arts Technology</a> at Illinois State University, I’ve been seeking new opportunities in the professional world, particularly around the Chicagoland area.</p>
 
-      <p>In regards to the skills that I currently have, I take interest in all types of media and see myself specializing in more than one field of art. You may find that my most recent completed projects are focused within Front End Web Development, Graphic Design, Motion Design, and User Interface/User Experience Design. I am compelled to follow one or more of these paths thoroughly.</p>
 
       <p>Want to work on a project together? <a href="mailto:heatherwiemelt@gmail.com" target="_blank" style=" color: #ec91a6;">Contact Me</a> </p>
 
@@ -111,7 +110,6 @@ function myFunction() {
   }
 }
 </script>
-
 
 
 <!---Tabs---->
