--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
             </div>
           </div>
 
+          <p> Detailed with Bootstrap 4 Framework </p>
+
 
           <div class="responsive">
             <div class="gallery">
@@ -102,6 +104,7 @@
             </div>
           </div>
 
+<p> Running on WordPress Engine, Managed with Jekyll </p>
 
           <div class="clearfix"></div>
 </div>
