--- a/resume.html
+++ b/resume.html
@@ -77,10 +77,11 @@
 <!--Resume-->
 
 <div id="resume">
-  <img src="images/Heather_Wiemelt_August_2019.jpg">
+  <img src="images/Heather_Wiemelt_July_2020.png">
 </div>
 
-<a href="images/Heather_Wiemelt_August_2019.pdf" download><button class="btn"><i class="fa fa-download"></i>Download</button></a>
+<a href="images/Heather_Wiemelt_July_2020.docx" download><button class="btn"><i class="fa fa-download"></i>Download Doc</button></a>
+<a href="images/Heather_Wiemelt_July_2020.pdf" download><button class="btn"><i class="fa fa-download"></i>Download PDF</button></a>
 
 </div>
 
