--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
           </div>
 
-<p> Running on WordPress Engine, Managed with Jekyll </p>
+<p> Managed with Jekyll </p>
 
           <div class="clearfix"></div>
 </div>
